--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:theme="@style/SplashTheme"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.PomodoroTimer.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
